# multi-agent-coding-crew

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
src/multi_agent_coding_crew/: __init__.py
src/multi_agent_coding_crew/agents/: __init__.py  definitions.py  executor.py
src/multi_agent_coding_crew/cli/: main.py
src/multi_agent_coding_crew/crew/: __init__.py  orchestrator.py
src/multi_agent_coding_crew/sandbox/: __init__.py  runner.py
src/multi_agent_coding_crew/tasks/: __init__.py  task.py
src/multi_agent_coding_crew/tools/: __init__.py  file_ops.py  shell_ops.py
src/multi_agent_coding_crew/utils/: export.py  token_counter.py
tests/: conftest.py  test_agents.py  test_sandbox.py  test_tasks.py  test_tools.py  test_utils.py
